small text wrapping issue

--- a/kahuna/public/js/usage-rights/usage-rights-editor.css
+++ b/kahuna/public/js/usage-rights/usage-rights-editor.css
@@ -1,6 +1,7 @@
 .ure {
     width: 100%;
     box-sizing: border-box;
+    white-space: normal;
 }
 
 .ure__cost {
